<resources>
    <string name="app_name">AQUATICS</string>
    <string name="app_name_label">Sports Inc.</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="exit">Exit</string>
    <string name="exit_confirmation">Are you sure you want to exit the application?</string>

    <string name="press_again">Press again to exit</string>
    <string name="home">Home</string>
    <string name="classes">Courses</string>
    <string name="notifi">Notifications</string>
    <string name="complain">Complains</string>
    <string name="request">Requests</string>
    <string name="report">Reports</string>
    <string name="academy">Academy\'s website</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="filter_current">current</string>
    <string name="filter_postponed">postponed</string>
    <string name="filter_canceled">canceled</string>
    <string name="filter_all">all</string>
    <string name="no_classes">No Courses today</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="No_Class">There is No Classes</string>
    <string name="Link">\"http://thesportsinc.com/\"</string>
    <string name="send">Send</string>
    <string name="filter_Trainee">Trainee</string>
    <string name="filter_Coach">Coach</string>
    <string name="filter_Admin">Admin</string>

    <string name="edit">Edit Profile</string>
    <string name="gender">Gender</string>
    <string name="slash">/</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="email">Email</string>
    <string name="phone">Phone Number</string>
    <string name="user_name">Full Name</string>


    <!-- Calendar Srtrings -->

    <string name="current_date">June, 2016</string>
    <string name="add_event">ADD CALENDAR EVENT</string>
    <string name="sun">Sun</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="last_date">30</string>


    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="password">Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm New Password</string>
    <string name="change_password">Change Password</string>
    <string name="no_Courses">No Courses Available</string>
    <string name="no_Events">No New Events</string>
    <string name="no_rules">No Rules</string>
    <string name="no_news">No News</string>
    <string name="log_in">Log in</string>
    <string name="no_notifications">No Notifications</string>
    <string name="no_Requests">No Requests</string>
    <string name="no_complains">No Complains</string>
    <string name="no_Report">No Payments</string>
    <string name="no_groups">No Groups</string>
    <string name="action_settings">Settings</string>
    <string name="lorem_ipsum">My Test</string>


    <string name="creation_date">Creation date</string>
    <string name="course_name_class_number">Course name, Class number</string>
    <string name="class_date">Class date</string>
    <string name="request_for">Request for:</string>
    <string name="newsSection">News</string>
    <string name="moreButton">MORE</string>
    <string name="eventsSections">Events</string>
    <string name="title_activity_news">NewsActivity</string>
    <string name="title_activity_events">EventsActivity</string>
    <string name="filter_running">Running</string>
    <string name="no_sessions">No Session</string>
    <string name="compose">Compose</string>
    <string name="class_details">Session Details</string>
    <string name="upload">Upload</string>
    <string name="postpone_class">Postpone</string>
    <string name="cancel_class">Cancel</string>
    <string name="BackupCoach">BackUp-Coach:</string>
    <string name="Coach">Coach:</string>
    <string name="Course">Course:</string>
    <string name="Session">Session:</string>
    <string name="Class">Class:</string>
    <string name="pool">Pool:</string>
    <string name="write_a_note">Write a Note</string>
    <string name="done">Done</string>
    <string name="session_has_been_cancelled">Session has been Canceled</string>
    <string name="failed_to_cancel_session">Faied to cancel Session</string>
    <string name="failed_to_postpone_session">Failed to postpone Session</string>
    <string name="server_dateTimeFormate">dd/MM/yyyy hh:mm</string>
    <string name="Postpone_msg">has been postponed to</string>
    <string name="server_dateFormate">yyyy-MM-dd</string>
    <string name="TimeFormate">hh:mm</string>
    <string name="StatusCanceled">Canceled</string>
    <string name="StatusPostponed">Postponed</string>
    <string name="StatusFinished">Finished</string>
    <string name="SessionNote">Session note:</string>
    <string name="SessionStatus">ClassStatus</string>
    <string name="select_sessionStatus">status</string>
    <string name="select_sessionPostponeDate">postpone_date</string>
    <string name="select_sessionPostponeTime">postpone_time</string>
    <string name="select_sessionID">id</string>
    <string name="select_sessionNote">class_notes</string>
    <string name="parameter_Table">table</string>
    <string name="parameter_where">where</string>
    <string name="parameter_values">values</string>
    <string name="Table_classes">classes</string>
    <string name="ResponseSuccess">DONE</string>
    <string name="Key_ClassEntity">Myclass</string>
    <string name="course_name">Level Name</string>
    <string name="group_number">Class Name</string>
    <string name="pool_number">Pool Name</string>
    <string name="coach_s_notes">Coach\'s note</string>
    <string name="attendance">Trainee Attendance</string>
    <string name="trainee_s_name">Trainee\'s name</string>


    <string name="Key_Course_name">course_name</string>
    <string name="Key_Group_name">group_name</string>
    <string name="Key_Pool_name">poolName</string>
    <string name="parameter_Table1">table1</string>
    <string name="parameter_Table2">table2</string>
    <string name="Key_CoachID">coach_id</string>
    <string name="Key_FinishedClass">finishedClass</string>
    <string name="enter_verfication_code">Enter Verification Code</string>
    <string name="about">About academy</string>
    <string name="To_Label">To: </string>
    <string name="From_Lable">From:</string>
    <string name="classesNum">Number of Courses:</string>
    <string name="SessionNum">Number of Sessions:</string>
    <string name="duration">Session Duration:</string>
    <string name="attend">Attendance</string>
    <string name="account">My Account</string>
    <string name="startDate">Start Date:-</string>
    <string name="remaindar">Reminder</string>
    <string name="status">Status</string>
    <string name="trainees">Trainee Name</string>
    <string name="descriptionLable">Description:</string>
    <string name="Sessions">Sessions:</string>
    <string name="notificationDetails">Notification Details</string>
    <string name="contentLable">Content:</string>
    <string name="RemindNote">Reminder Note</string>
    <string name="no_of_sessions">Number of Sessions:</string>
    <string name="duration_of_session">Duration of Session:</string>
    <string name="description_">Description:</string>
    <string name="no_groups_available">No Courses available</string>
    <string name="date">Date</string>
    <string name="time_">Times:</string>
    <string name="days_">Days:</string>
    <string name="coach_">Coach:</string>
    <string name="TimeOutLabel">Poor Internet Connection...</string>
    <string name="retry_btn">tap to Retry</string>
    <string name="groupsLabel">Courses:</string>
    <string name="coursesLabel">Classes</string>
    <string name="homeLabel">Home</string>
    <string name="levelDetails">Class Details</string>
    <string name="courses">Courses</string>
    <string name="calendarTab">Calender</string>

    <integer name="selectLimit">10</integer>
    <integer name="sliderLimit">1</integer>


    <string-array name="payment_status_array">
        <item>Status</item>
        <item>All</item>
        <item>Booked</item>
        <item>Paid</item>
    </string-array>

    <string-array name="sports_array">
        <item>List 1</item>
        <item>List 2</item>
        <item>List 3</item>
    </string-array>
    <string name="title_activity_levels">LevelsActivity</string>
    <string name="classesActivity">Classes</string>
    <string name="levelTab">Services</string>
    <string name="no_programs">No programs available</string>
    <string name="select_start">start</string>
    <string name="select_limit">limit</string>
    <string name="parameter_table">table</string>
    <string name="parameter_order">ordered</string>
    <string name="parameter_limit">limit</string>
    <string name="value_true">true</string>
    <string name="table_program">classes_category</string>
    <string name="DefaultName">Kids Lessons</string>
    <string name="Key_programID">classcat_id</string>
    <string name="Key_deactive">deactive</string>
</resources>
