<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_side_home"
            android:title="@string/home" />
        <item
            android:id="@+id/classes"
            android:icon="@drawable/ic_side_classes"
            android:title="@string/classes" />
        <item
            android:id="@+id/notifications"
            android:icon="@drawable/ic_side_notifications"
            android:title="@string/notifi"
            app:actionLayout="@layout/notification_counter"/>
        <item
            android:id="@+id/requests"
            android:icon="@drawable/ic_side_request"
            android:title="@string/request" />
        <item
            android:id="@+id/complains"
            android:visible="false"
            android:icon="@drawable/ic_side_complains"
            android:title="@string/complain" />
        <item
            android:id="@+id/reports"
            android:icon="@drawable/ic_side_reports"
            android:title="@string/report" />
        <item
            android:id="@+id/link"
            android:visible="false"
            android:icon="@drawable/ic_side_link"
            android:title="@string/academy" />
    </group>

    <group
        android:id="@+id/menu_bottom"
        android:checkableBehavior="none">
            <item
                android:id="@+id/nav_signout"
                android:icon="@drawable/ic_side_logout"
                android:title="Logout" />

    </group>

</menu>
