<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/complain_filter1"
            android:title="@string/filter_all"
            android:orderInCategory="1" />
        <item
            android:id="@+id/complain_filter2"
            android:orderInCategory="2"
            android:title="@string/filter_Trainee"/>
        <item
            android:id="@+id/complain_filter3"
            android:title="@string/filter_Coach"
            android:orderInCategory="3"/>
        <item
            android:id="@+id/complain_filter4"
            android:title="@string/filter_Admin"
            android:orderInCategory="4" />
    </group>

</menu>