<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorWhite"
    card_view:contentPadding="5dp"
    card_view:cardUseCompatPadding="true"
    card_view:cardElevation="5sp"
    card_view:cardCornerRadius="5dp">

    <LinearLayout
        android:padding="5dp"
        android:paddingBottom="15dp"
        android:paddingTop="15dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/creationDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:layout_marginStart="14dp"
            android:textColor="@color/colorGray"
            android:text="@string/creation_date" />

        <TextView
            android:id="@+id/requestforTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:textColor="@color/colorTextDark"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/request_for" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="false"
        android:descendantFocusability="blocksDescendants"
        android:focusable="false"
        android:focusableInTouchMode="false">

        <ImageButton
            android:id="@+id/acceptImageButton"
            android:clickable="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:background="@drawable/ic_check_circle" />

        <TextView
            android:id="@+id/courseNameAndClassNumberTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:textColor="@color/colorText"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_toEndOf="@+id/acceptImageButton"
            android:layout_toRightOf="@+id/acceptImageButton"
            android:layout_marginTop="5dp"
            android:text="@string/course_name_class_number" />

        <TextView
            android:id="@+id/classDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:textColor="@color/colorText"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@id/courseNameAndClassNumberTextView"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/class_date" />
    </RelativeLayout>


    </LinearLayout>

</android.support.v7.widget.CardView>