<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="Activities.LoginActivity"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <LinearLayout
            android:id="@+id/ll_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginBottom="40dp"
                app:srcCompat="@drawable/sportsinc_aquatics_logo" />

            <EditText
                android:id="@+id/phoneEditText_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone"
                android:padding="10dp"
                android:background="@color/colorWhite"
                android:textColor="@color/colorBlack"
                android:ems="10"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/passEditText_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:padding="10dp"
                android:background="@color/colorWhite"
                android:textColor="@color/colorBlack"
                android:ems="10"
                android:layout_marginTop="10dp"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/loginButton_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:onClick="loginClicked"
                android:text="@string/log_in"
                android:textAllCaps="false"
                android:layout_marginTop="30dp"
                android:paddingTop="0dp"
                android:paddingBottom="0dp"
                android:paddingStart="50dp"
                android:paddingEnd="50dp"
                android:backgroundTint="@color/colorGray"
                android:textColor="@color/colorTextLight"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>