<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.bassam.sporstincmanger.Activities.PaymentTraineesActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/appbar_padding_top"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:elevation="0dp">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay">
        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/ten_dimens"
        android:background="@color/colorTopTapsGray">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/colorWhite"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:text="Class 1"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/belowlayout_navigation"
            android:layout_marginStart="@dimen/dimens_15"
            android:layout_marginEnd="@dimen/dimens_15"
            android:layout_marginBottom="@dimen/dimens_15"
            android:background="@color/colorWhite"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/ten_dimens">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorLogoBlue"
                        android:textStyle="bold"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                        android:text="@string/startDate"/>
                    <TextView
                        android:id="@+id/classStartDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/ten_dimens"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                        android:textColor="@color/colorLogoBlue"
                        android:text="2017/11/11"/>
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:paddingStart="@dimen/ten_dimens"
                    android:paddingEnd="@dimen/padding_5"
                    android:paddingTop="2dp"
                    android:paddingBottom="2dp"
                    android:background="@drawable/remindar_background"
                    android:drawableEnd="@drawable/ic_remindar"
                    android:drawablePadding="@dimen/padding_5"
                    android:gravity="center"
                    android:text="@string/remaindar"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite" />
            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/colorGray"/>

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:prompt="@string/status"
                android:layout_margin="@dimen/ten_dimens">
            </Spinner>

            <ListView
                android:background="@drawable/listview_border"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="@dimen/twenty_demin">

            </ListView>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/belowlayout_navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/colorLogoBlue"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/homeNavigation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:drawableTop="@drawable/ic_home"
                android:gravity="center"
                android:text="@string/home"
                android:textColor="@color/colorWhite"
                android:background="?attr/selectableItemBackground"
                android:textSize="14sp" />

            <View
                android:layout_width="1dp"
                android:visibility="gone"
                android:layout_height="match_parent"
                android:background="@color/colorWhite"/>

            <TextView
                android:id="@+id/coursesNavigation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:drawableTop="@drawable/ic_course"
                android:gravity="center"
                android:text="@string/courses"
                android:textColor="@color/colorWhite"
                android:background="?attr/selectableItemBackground"
                android:textSize="14sp" />

            <View
                android:layout_width="1dp"
                android:visibility="gone"
                android:layout_height="match_parent"
                android:background="@color/colorWhite"/>

            <TextView
                android:id="@+id/emailTextView_contactus"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:drawableTop="@drawable/ic_people"
                android:gravity="center"
                android:text="@string/attend"
                android:textColor="@color/colorWhite"
                android:background="?attr/selectableItemBackground"
                android:textSize="14sp" />

            <View
                android:layout_width="1dp"
                android:visibility="gone"
                android:layout_height="match_parent"
                android:background="@color/colorWhite"/>

            <TextView
                android:id="@+id/direcctionTextView_contactus"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:drawableTop="@drawable/ic_person"
                android:gravity="center"
                android:text="@string/account"
                android:textColor="@color/colorWhite"
                android:background="?attr/selectableItemBackground"
                android:textSize="14sp" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>
