<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.bassam.sporstincmanger.Activities.ActivitySessionAttendance"
    android:orientation="vertical">


    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/appbar_padding_top"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:elevation="0dp">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay">
        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <com.example.bassam.sporstincmanger.CustomView.CustomLoadingView
        android:id="@+id/LoadingView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </com.example.bassam.sporstincmanger.CustomView.CustomLoadingView>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/classDateTextView_coachCourseSingleClass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_margin="10dp"
            android:text="5_5_2017"
            android:textColor="@color/colorText"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/courseNameTextView_coachCourseSingleClass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_margin="18dp"
            android:text="@string/course_name"
            android:textColor="@color/colorTextDark"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/ll_coachCourseSingleClass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_below="@+id/courseNameTextView_coachCourseSingleClass"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/groupNumberTextView_coachCourseSingleClass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/colorText"
                android:layout_weight="1"
                android:text="@string/group_number" />

            <TextView
                android:id="@+id/poolNumberTextView_coachCourseSingleClass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="14sp"
                android:textColor="@color/colorText"
                android:text="@string/pool_number" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/CoachAttendance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="24dp"
            android:padding="10dp"
            android:layout_below="@+id/ll_coachCourseSingleClass">
        <ImageView
            android:id="@+id/coach_attend"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/ic_check_circle" />

        <TextView
            android:id="@+id/coach_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_gravity="center"
            android:textSize="14sp"
            android:textColor="@color/colorText"
            android:text="@string/trainee_s_name" />
        </LinearLayout>
        <TextView
            android:id="@+id/TextView_coachCourseSingleClass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorTextDark"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/CoachAttendance"
            android:text="@string/coach_s_notes" />

        <android.support.v7.widget.CardView
            android:id="@+id/cardView_coachCourseSingleClass"
            android:layout_below="@+id/TextView_coachCourseSingleClass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardCornerRadius="8dp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            card_view:cardElevation="@dimen/cardview_default_elevation">

            <TextView
                android:id="@+id/coachNotesTextView_coachCourseSingleClass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_below="@+id/ll_coachCourseSingleClass"
                android:text="@string/coach_s_notes" />
        </android.support.v7.widget.CardView>

        <TextView
            android:id="@+id/attendanceTextView_coachCourseSingleClass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="10dp"
            android:layout_below="@id/cardView_coachCourseSingleClass"
            android:textSize="18sp"
            android:textColor="@color/colorTextDark"
            android:text="@string/attendance" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/attendanceTextView_coachCourseSingleClass"
            android:orientation="vertical">

            <ListView
                android:id="@+id/traineesAttendanceListView_coachCourseSingleClass"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="26dp"
                android:layout_marginStart="26dp"
                android:layout_marginTop="5dp" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>
